plugins/value-container-assignment/testData/diagnostics/noAnnotationTest.diag.txt
/noAnnotationTest.kt:21:5: error: val cannot be reassigned
    task.input = "OK"
    ^
/noAnnotationTest.kt:21:18: error: type mismatch: inferred type is String but StringProperty was expected
    task.input = "OK"
                 ^
/noAnnotationTest.kt:22:5: error: val cannot be reassigned
    task.input = StringProperty("OK")
    ^
/noAnnotationTest.kt:24:9: error: val cannot be reassigned
        input = "OK"
        ^
/noAnnotationTest.kt:24:17: error: type mismatch: inferred type is String but StringProperty was expected
        input = "OK"
                ^
/noAnnotationTest.kt:27:9: error: val cannot be reassigned
        input = StringProperty("OK")
        ^
/noAnnotationTest.kt:29:5: error: val cannot be reassigned
    task.input = 42
    ^
/noAnnotationTest.kt:29:18: error: the integer literal does not conform to the expected type StringProperty
    task.input = 42
                 ^
/noAnnotationTest.kt:31:9: error: val cannot be reassigned
        input = 42
        ^
/noAnnotationTest.kt:31:17: error: the integer literal does not conform to the expected type StringProperty
        input = 42
                ^

